# pydoc-markdown

./: .gitignore  .gitmodules  .gitpublish  .pre-commit-hooks.yaml  .pylintrc  .readthedocs-custom-steps.yml  .readthedocs-requirements.txt  .readthedocs.yml  .versionupgrade  404.html  CHANGELOG.md  CHANGELOG.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.markdown  README.md  index.html  package.yaml  package.yml  pydoc-markdown.yaml  pydoc-markdown.yml  pydoc_markdown.md  pydoc_markdown.py  pylintrc  pyproject.toml  readme.md  requirements.txt  setup.py  sitemap.xml
.changelog/: 3.0.0.toml  3.0.0.yml  3.0.1.toml  3.0.1.yml  3.0.2.toml  3.0.2.yml  3.1.0.toml  3.1.0.yml  3.1.1.toml  3.1.1.yml  3.10.0.toml  3.10.0.yml  3.10.1.toml  3.10.1.yml  3.10.3.toml  3.10.3.yml  3.11.0.toml  3.11.0.yml  3.12.0.toml  3.12.0.yml  3.12.1.toml  3.12.1.yml  3.13.0.toml  3.13.0.yml  3.14.0.toml  3.14.0.yml  3.2.0.post1.toml  3.2.0.post1.yml  3.2.0.toml  3.2.0.yml  3.3.0.toml  3.3.0.yml  3.3.1.toml  3.3.1.yml  3.4.0.toml  3.4.0.yml  3.5.0.toml  3.5.0.yml  3.6.0.toml  3.6.0.yml  (+51 more)
.circleci/: config.yml
.config/: classifiers.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/files/: slam-cli.txt
.github/workflows/: changelog.yaml  examples.yaml  python-test.yml  python.yml
api/cli/: index.html
api/interfaces/: index.html
api/loaders/: index.html
api/processors/: index.html
api/pydoc_markdown/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
deprecated-configuration/: index.html
docs/: .readthedocs-custom-steps.yml  .readthedocs-requirements.txt  README.md  build.novella  configuration.md  getting-started.md  migrate-from-3x-to-4x.md  mkdocs.yml  pydocmd.yml  readthedocs.md  requirements.txt
docs/content/: changelog.md  contributing.md  deprecated-configuration.md  getting-started.md  index.md  just-generate-me-some-markdown.md
docs/sources/: index.md
examples/docusaurus/: README.md  pydoc-markdown.yml
examples/hugo/: index.html  pydoc-markdown.yml
examples/mkdocs/: pydoc-markdown.yml  pyproject.toml
examples/nextra/: README.md  pydoc-markdown.yml
examples/readthedocs/: index.html
examples_srcs/: django_models.py
getting-started/: index.html
guides/migrate-from-3x-to-4x/: index.html
guides/readthedocs/: index.html
guides/using-novella/: index.html
just-generate-me-some-markdown/: index.html
pydoc-markdown/: .pylintrc  MANIFEST.in  package.yaml  package.yml  setup.py
pydoc-markdown-readthedocs-mkdocs-proxy/: .gitignore  Makefile  README.md  package.yaml  setup.py
pydoc_markdown/: __init__.py  __main__.py  markdown.py
pydocmarkdown/: cli.py  markdown_writer.py  pydoc_markdown.py
pydocmd/: __init__.py  __main__.py  document.py  imp.py  loader.py  preprocessor.py  restructuredtext.py
pydocmd/preprocessors/: google.py  rst.py  simple.py  smart.py
readthedocs/: index.html
search/: search_index.json
src/pydoc_markdown/: __init__.py  interfaces.py  main.py  parse.py  pdmir.py  reflection.py  static.py  utils.py
src/test/: utils.py
test/: __init__.py  test_yaml_config.py  utils.py
test/processors/: __init__.py  (+6 more)
testmodule/: __init__.py
tests/: __init__.py  test_google_preprocessor.py  test_markdown_headers.py  test_processor_google.py  test_processor_rst.py  test_processor_smart.py  test_restructuredtext.py  test_smart_preprocessor.py  utils.py
usage/: index.html
(+198 files in other folders)
